# rust-learning

./: .gitignore
assignment_1/src/: main.rs
assignment_2/src/: main.rs
chat-app/: Cargo.toml
chat-app-horizontal-scaling/: Cargo.toml
chat-app-horizontal-scaling/src/: models.rs  state.rs
chat-app-own/src/: handlers.rs  main.rs
chat-app/src/: main.rs
cli-md-html-parser/: random.html
day-2-closures-and-iterators/src/: main.rs
full-stack-chat-app/: Cargo.toml
redis/src/: main.rs
simple-websocket-server/: Cargo.toml
simple-websocket-server/src/: main.rs
starter/chat-app-own/: Cargo.toml
starter/day-1-cli-md-html-parser/: Cargo.toml
starter/day-2-closures-and-iterators/: Cargo.toml
starter/day-2-smart-pointers-and-lifetimes/: Cargo.toml
starter/redis/: Cargo.toml
starter/simple-websocket-server/: Cargo.toml
starter/todo_backend/: Cargo.toml
todo-backend/: Cargo.toml
todo-backend/migrations/: 20260130073400_create_todos.sql
todo-backend/src/: main.rs
todo_backend/: Cargo.toml
uptime-monitor/: cargo.toml
uptime-monitor/apps/api/: Cargo.toml
uptime-monitor/apps/api/migrations/: 0001_initial_schema.sql
uptime-monitor/apps/api/src/: db.rs  lib.rs  main.rs
uptime-monitor/apps/api/src/handlers/: auth.rs  mod.rs  monitor.rs
uptime-monitor/apps/api/src/jwt/: jwt.rs
uptime-monitor/apps/api/src/middleware/: checker.rs
uptime-monitor/apps/producer/: Cargo.toml
uptime-monitor/apps/producer/src/: main.rs
uptime-monitor/apps/worker/: Cargo.toml
uptime-monitor/apps/worker/src/: main.rs
week-1-cli-md-html-parser/: sample.md
(+27 files in other folders)
