[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
common = { path = "../../packages/common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
dotenvy = "0.15" # To load our .env file
tower-http = { version = "0.5", features = ["cors"] } # For browser safety
anyhow = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.3"
chrono = "0.4.44"
uuid = "1.22.0"
