[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24.0", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
common = { path = "../../packages/common" }
